--- a/modulo-3/cap-19/ex022/fundo005.html
+++ b/modulo-3/cap-19/ex022/fundo005.html
@@ -8,18 +8,20 @@
     <style>
         body{
             height: 97vh;
-            background-color: black;
+            /*background-color: black;
             background-image: url(imagens/wallpaper002.jpg);
             background-position: center center;
             background-repeat: repeat-y;
+            background-size: cover;
+            background-attachment: fixed;*/
+            background: black url(imagens/wallpaper002.jpg) center center no-repeat fixed;
             background-size: cover;
         }
         main{
             background-color: white;
             width: 400px;
-            padding: 10px;
+            padding: 10px 15px;
             margin:auto;
-            margin-top: 200px;
             border:1px solid darkblue;
             border-radius: 10px;
         }
