--- a/modulo-4/cap 22/pag1.html
+++ b/modulo-4/cap 22/pag1.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-br">    
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tabela-8</title>
+    <title>Teste</title>
     <style>
         body{
             font-family: Arial, Helvetica, sans-serif;
         }
         table{
-            width: 400px;
             border-collapse: collapse;
         }
         caption{
@@ -26,14 +25,13 @@
             background-color: rgb(167, 129, 129);
         }
         div#container{
-            width: 400px;
+            width: 70vh;
             overflow-x: auto;
         }
     </style>
 </head>
 <body>
-    <h1>Tabela responsiva</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque cum a veritatis est? Fuga quidem voluptate nam consequuntur similique repellat corrupti saepe provident? Explicabo ea, natus dolorem aliquam aperiam iusto!</p>
+    <h1>Isso é um teste!</h1>
     <div id="container">
         <table>
             <caption>Responsiva</caption>
