--- a/modulo-4/cap 22/pag1.html
+++ b/modulo-4/cap 22/pag1.html
@@ -25,7 +25,7 @@
             background-color: rgb(167, 129, 129);
         }
         div#container{
-            width: 70vh;
+            width: auto;
             overflow-x: auto;
         }
     </style>
