--- a/modulo-4/cap 25/mq004/index.html
+++ b/modulo-4/cap 25/mq004/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Media Query</title>
     <link rel="stylesheet" href="estilos/style.css" media="all">
-    <link rel="stylesheet" href="estios/media-query.css">
+    <link rel="stylesheet" href="estilos/responsivo.css">
 </head>
 <body>
     <main>
